css/style.css
body {
    --odyssey_yellow: #eed777;
    --odyssey_orange: #fba670;
    --odyssey_blue_light: #3780cd;
    --odyssey_blue_dark: #184776;
    --odyssey_grey: #cdccca;
    --odyssey_black: #2d2d2d;
}

body {
    margin: 0px;
    color: var(--odyssey_black);
}

.container {
    width: 100vw;
    padding: 20px 40px;
    box-sizing: border-box;
}

@media only screen and (min-width: 768px) {
    .container {
        padding: 60px 60px;
    }
}

@media only screen and (min-width: 1024px) {
    .container {
        padding: 60px 180px;
    }
}

h2 {
    font-family: "kepler-std-semicondensed-dis", serif;
    font-size: 54px;
    -webkit-margin-before: 0.25em;
    -webkit-margin-after: 0.25em;
    color: var(--odyssey_grey);
}

h3 {
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
}

h4 {
    font-family: 'Roboto Condensed', sans-serif;
    font-size: 20px;
}

p {
    font-family: 'Garamond', serif;
    font-size: 18px;
}

@media only screen and (min-width: 768px) {
    h2 {
        font-size: 76px;
    }
}

@media only screen and (min-width: 1024px) {
    h2 {
        font-size: 96px;
    }
}

.button {
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    padding: 20px;
    border: 2px var(--odyssey_grey) solid;
    color: var(--odyssey_grey);
    background-color: white;
    transition: 0.75s;
}

.button:hover {
    background-color: var(--odyssey_grey);
    color: white;
}


/* COLOR CODING */


/*
#nav {
    background-color: red;
}

#hero {
    background-color: orange;
}

#philosophy {
    background-color: yellow;
}

#formula {
    background-color: yellowgreen;
}

#services {
    background-color: darkgreen;
}

#stories {
    background-color: teal;
}

#cta {
    background-color: lightskyblue;
}

#booklet {
    background-color: blue;
}

#locations {
    background-color: blueviolet;
}

#footer {
    background-color: violet;
}
*/


/* END COLOR CODING */

#nav {
    position: absolute;
    padding: 20px 180px;
}

#nav_navigation {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
}

#hero {
    height: 90vh;
    display: flex;
    background-image: url(../img/koushik-chowdavarapu-137783-unsplash.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.cd-headline.clip {
    line-height: 0.6em;
}

.cd-words-wrapper {
    display: inline-block;
    position: relative;
    text-align: left;
}

.cd-words-wrapper b {
    display: inline-block;
    position: absolute;
    white-space: nowrap;
    left: 0;
    top: 0;
}

.cd-words-wrapper b.is-visible {
    position: relative;
}

.no-js .cd-words-wrapper b {
    opacity: 0;
}

.no-js .cd-words-wrapper b.is-visible {
    opacity: 1;
}

.cd-headline.clip span {
    display: inline-block;
    padding: .2em 0;
}

.cd-headline.clip .cd-words-wrapper {
    overflow: hidden;
    vertical-align: top;
}

.cd-headline.clip .cd-words-wrapper::after {
    /* line */
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    width: 2px;
    height: 100%;
    background-color: #aebcb9;
}

.cd-headline.clip b {
    opacity: 0;
}

.cd-headline.clip b.is-visible {
    opacity: 1;
}

#philosophy {}

#formula {}

#formula_heading {}

#formula_intro {}

.formula_step {}

@media only screen and (min-width: 768px) {
    #formula {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        grid-gap: 0px 50px;
    }
    #formula_heading {
        grid-column: 1 / 4;
    }
    #formula_intro {
        grid-column: 1 / 3;
    }
    .formula_step {
        grid-row-start: 3;
    }
}

#services {}

#stories {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 50px;
}

#stories h2 {
    grid-column: 1 / 4;
}

.story_image {
    width: 100%;
    height: 200px;
    background-color: black;
}

#cta {}

#booklet {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
}

#booklet_heading {
    grid-column: 1 / 6;
}

#booklet_intro {
    grid-column: 1 / 3;
}

#booklet_image {
    grid-column: 4 / 6;
    background-color: black;
}

#locations {}

#footer {}

